# fsmtp-v2

./: .gitignore  CMakeLists.txt  Makefile  README.MD  cat  config.json  fsmtp.service  gencert.py  gitlab.eml  gmail-email.eml  install.py  install.sh  main.cc  main.h  meson.build  openai_classification.txt  package.json  records.txt  start_fsmtp.sh  tac  test.eml  tests.cc  tests.h
.github/workflows/: main.yml
api/: package.json  tsconfig.json
api-old/: tsconfig.json
api-old/src/: options.ts
api-old/src/routes/: fsmtp.route.ts
api-old/views/fsmtp/: inbox.view.ejs
api-old/views/includes/: default-body.include.ejs  head.include.ejs
api/apps/fsmtp/: package.json
api/public/: tsconfig.json
api/src/: main.ts  security.ts  template.ts
api/src/controllers/: accounts.controller.ts
api/src/models/: account-shortcut.model.ts  account.model.ts  user.model.ts
api/src/routes/: accounts.route.ts  fsmtp.route.ts
api/templates/fsmtp/: inbox.html
api/views/accounts/: login.view.ejs  register.view.ejs
api/views/includes/: default-body.include.ejs  footer.include.ejs  (+1 more)
apps/fsmtp-web/: package.json
datasets/: EN_SMS-SPAM.json  EN_STOPWORDS.json
dev/: autorun.js  compile.js  gencert.py  initdb.py
emls/: quore.eml
fallback/: config.json
fsmtp-v2-database/: email.db.cql  init.db.cql  temp.txt  test.db.sql  users.db.cql
lib/: default.cc  default.h  meson.build
lib/args/: arg-actions.src.cc  arg-actions.src.h  args.src.cc  args.src.h  meson.build
lib/builders/: meson.build  mimev2.src.cc  mimev2.src.h
lib/client/: SMTPClient.src.cc  SMTPClient.src.h  SMTPClientActions.src.cc  SMTPClientActions.src.h  SMTPClientSession.src.cc  SMTPClientSession.src.h  SMTPMessageComposer.src.cc  SMTPMessageComposer.src.h
lib/dkim/: DKIM.src.cc  DKIM.src.h  DKIMCanonicalization.src.cc  DKIMCanonicalization.src.h  DKIMHashes.src.cc  DKIMHashes.src.h  DKIMHeader.src.cc  DKIMHeader.src.h  DKIMRecord.src.cc  DKIMRecord.src.h  DKIMSigner.src.cc  DKIMSigner.src.h  DKIMValidator.src.cc  DKIMValidator.src.h  DKIMVerifier.src.cc  DKIMVerifier.src.h  meson.build
lib/dmarc/: DMARCRecord.src.cc  DMARCRecord.src.h  meson.build
lib/dns/: DMARC.src.h  DNS.src.h  DNSHeader.src.cc  DNSHeader.src.h  DNSServer.src.cc  DNSServerSocket.src.cc  DNSServerSocket.src.h  DNSZone.src.cc  DNSZone.src.h  Resolver.src.cc  Resolver.src.h  SPF.src.cc  SPF.src.h  meson.build
lib/general/: AES256.src.cc  AES256.src.h  Configuration.src.cc  Configuration.src.h  Global.src.cc  Global.src.h  Logger.src.cc  Logger.src.h  NCursesDisplay.src.cc  NCursesDisplay.src.h  Passwords.src.cc  Passwords.src.h  Timer.src.cc  Timer.src.h  assertions.src.h  base64.cc  base64.h  cleanup.src.cc  cleanup.src.h  connections.src.cc  connections.src.h  encoding.src.cc  encoding.src.h  exceptions.src.h  hex.src.cc  hex.src.h  logger.src.cc  logger.src.h  macros.src.cc  macros.src.h  meson.build
lib/http/: HTTP.src.cc  HTTP.src.h  HTTPRequest.src.cc  HTTPRequest.src.h  HTTPResponse.src.cc  HTTPResponse.src.h  HTTPRouter.src.cc  HTTPRouter.src.h  HTTPServer.src.cc  HTTPServer.src.h  HTTPService.src.cc  HTTPService.src.h  meson.build
lib/imap/: IMAP.MD  IMAP.src.h  IMAPAuthHandler.src.cc  IMAPAuthHandler.src.h  IMAPClientSocket.src.cc  IMAPClientSocket.src.h  IMAPCommand.src.cc  IMAPCommand.src.h  IMAPCommandParser.src.cc  IMAPCommandParser.src.h  IMAPMailboxHandler.src.cc  IMAPMailboxHandler.src.h  IMAPMessageHander.src.cc  IMAPMessageHander.src.h  IMAPMessageHandler.src.cc  IMAPMessageHandler.src.h  IMAPResponse.src.cc  IMAPResponse.src.h  IMAPServer.src.cc  IMAPServer.src.h  IMAPServerSession.src.cc  IMAPServerSession.src.h  IMAPServerSocket.src.cc  IMAPServerSocket.src.h  meson.build
lib/mime/: meson.build  mimev2.src.cc  mimev2.src.h  types.src.cc  types.src.h
lib/ml/: NaiveBayes.src.cc  NaiveBayes.src.h  WordEncoder.src.cc  WordEncoder.src.h
lib/models/: Account.src.cc  Account.src.h  Email.src.cc  Email.src.h  EmailShortcut.src.cc  EmailShortcut.src.h  LocalDomain.src.cc  LocalDomain.src.h  Mailbox.src.cc  Mailbox.src.h  MailboxStatus.src.cc  MailboxStatus.src.h  Models.src.h  RawEmail.src.cc  RawEmail.src.h  Subscription.src.h  UIDHolder.src.cc  UIDHolder.src.h  email.src.cc  email.src.h  meson.build
lib/networking/: Address.src.cc  Address.src.h  DNS.src.cc  DNS.src.h  IP.src.cc  IP.src.h  IPv4.src.cc  IPv4.src.h  IPv6.src.cc  IPv6.src.h  SMTPSocket.src.cc  SMTPSocket.src.h  meson.build
lib/openai/: Classification.src.cc  Classification.src.h  meson.build
lib/parsers/: meson.build  mime.src.cc  mime.src.h  mimev2.src.cc  mimev2.src.h
lib/pop3/: P3.src.h  P3ClientSocket.src.cc  P3ClientSocket.src.h  P3Commands.src.cc  P3Commands.src.h  P3Exceptions.src.cc  P3Exceptions.src.h  P3Response.src.cc  P3Response.src.h  P3Server.src.cc  P3Server.src.h  P3ServerSession.src.cc  P3ServerSession.src.h  P3ServerSocket.src.cc  P3ServerSocket.src.h  meson.build
lib/server/: SMTPActions.src.cc  SMTPActions.src.h  SMTPAuthentication.src.cc  SMTPAuthentication.src.h  SMTPServer.src.cc  SMTPServer.src.h  SMTPServerExceptions.src.h  SMTPServerSession.src.cc  SMTPServerSession.src.h  SMTPSpamDetection.src.cc  SMTPSpamDetection.src.h
lib/smtp/: Command.src.cc  Command.src.h  Response.src.cc  Response.src.h  meson.build
lib/spam/: NaiveBayes.src.cc  NaiveBayes.src.h  WordEncoder.src.cc  WordEncoder.src.h  __NaiveBayes.src.cc  __NaiveBayes.src.h  meson.build
lib/spf/: SPFRecord.src.cc  SPFRecord.src.h  SPFValidator.src.cc  SPFValidator.src.h  meson.build
lib/workers/: DatabaseWorker.src.cc  DatabaseWorker.src.h  TransmissionWorker.src.cc  TransmissionWorker.src.h  Worker.src.cc  Worker.src.h  meson.build
lib/xfannst/: XFannstFlags.src.cc  XFannstFlags.src.h  meson.build
logs/: Mon, 17 Aug-2020.txt  Tue, 18 Aug 2020.txt
samples/eml/: fannst.eml  outlook.eml
templates/: footer.html  head.html  header.html
templates/mailer/: error.html
tests/: address.test.cc  dkim.test.cc  meson.build  models.test.cc
website/: .gitignore  package.json  tsconfig.json
website/src/: config.ts  logger.ts  main.ts
(+62 files in other folders)
