sources += files(
    'AES256.src.cc',
    'cleanup.src.cc',
    'connections.src.cc',
    'encoding.src.cc',
    'exceptions.src.cc',
    'hex.src.cc',
    'Logger.src.cc',
    'Passwords.src.cc',
    'Timer.src.cc',
    'Configuration.src.cc',
    'macros.src.cc',
    'Global.src.cc'
)

test_sources += files (
    'cleanup.src.cc'
)